# flexorch-sdk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_process.py  batch_process.py  s3_import.py
src/flexorch_sdk/: __init__.py  _transport.py  client.py  errors.py
src/flexorch_sdk/models/: __init__.py  connector.py  dataset.py  job.py  search.py
src/flexorch_sdk/resources/: __init__.py  connectors.py  datasets.py  jobs.py  usage.py  webhooks.py
tests/: test_client.py  test_jobs.py  test_resources.py  test_s3_and_search.py
