[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flexorch-sdk"
version = "0.1.0"
description = "Python SDK for the FlexOrch API — process documents, build LLM-ready datasets"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["httpx>=0.27"]
keywords = ["llm", "dataset", "document", "pipeline", "flexorch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.23", "respx>=0.21"]

[project.urls]
Homepage = "https://flexorch.com"
Repository = "https://github.com/flexorch/flexorch-sdk"
Issues = "https://github.com/flexorch/flexorch-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/flexorch_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
